style: fix some text overflows

--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -14,6 +14,10 @@
   }
 }
 
+.adios {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
 .adios span {
   animation: wiggle 1s ease-in-out infinite;
   display: inline-block;
@@ -32,6 +36,7 @@
   .contactList {
     display: flex;
     flex-direction: column;
-    align-items: flex-start
+    align-items: flex-start;
+      gap: 0;
   }
 }
